--- a/Angular/proyectoFinal/src/app/paginas/profile-teacher/profile-teacher.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/profile-teacher/profile-teacher.component.html
@@ -1,5 +1,6 @@
 
-<div *ngIf="teacher">
+<div class="ml-2">
+  <div *ngIf="teacher">
     <h2>Perfil</h2>
     
 
@@ -24,4 +25,6 @@
       <button type="submit" (click)="save()">Guardar</button>
     </form>
   </div>
+</div>
+
   
