--- a/Angular/proyectoFinal/src/app/paginas/teacher-page/teacher-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/teacher-page/teacher-page.component.html
@@ -1,4 +1,5 @@
-<div class="form-group">
+<div class="containerTeacherIndex">
+  <div class="form-group">
     <div class="blurredwallpaper">
       <h2>Crear un nuevo ranking </h2>
       <form (ngSubmit)="crearRanking()">
@@ -33,10 +34,5 @@
 
   </div>
 </div>
+</div>
 
-<!-- <button mat-raised-button color="primary" (click)="openAddPracticeDialog()">Añadir práctica/entrega</button> -->
-<!-- <div class="flex-profile">
-  <button class="neon-warning" (click)="eliminarRegistro(ranking.id)">
-    Eliminar Ranking ⚠️
-  </button>
-</div> -->
