--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -40,7 +40,8 @@
       <button type="button" (click)="nuevaTarea = false">Cancelar</button>
     </form>
   </div>
-  <button *ngIf="!nuevaTarea" (click)="nuevaTarea = true">Añadir nueva Tarea</button>
+
+  <button *ngIf="!nuevaTarea && teacher && teacher.email !== ''" (click)="nuevaTarea = true">Añadir nueva Tarea</button>
 
   <table *ngIf="!nuevaTarea" class="ranking-table">
     <thead>
@@ -48,6 +49,7 @@
         <th>Posición</th>
         <th>Nombre</th>
         <th>Puntuación</th>
+        <th>SoftSkills</th>
       </tr>
     </thead>
     <tbody>
@@ -56,6 +58,13 @@
           <td>{{ i + 1 }}</td>
           <td>{{ analysis.name }}</td>
           <td>{{ analysis.points }}</td>
+          <td>
+            <img [src]="analysis.imageUrls.emotional" alt="Emotional Rank Image" width="50" height="50" />
+            <img [src]="analysis.imageUrls.thinking" alt="Thinking Rank Image" width="50" height="50" />
+            <img [src]="analysis.imageUrls.responsability" alt="responsability Rank Image" width="50" height="50" />
+            <img [src]="analysis.imageUrls.cooperation" alt="cooperation Rank Image" width="50" height="50" />
+            <img [src]="analysis.imageUrls.initiative" alt="initiative Rank Image" width="50" height="50" />
+          </td>
           <td *ngIf="teacher && teacher.email !== ''">
             <button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar</button>
           </td>
