--- a/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.html
@@ -30,15 +30,15 @@
     </form>
 </div> -->
 
-<div class="container">
+<div class="container align-items-center vh-100">
   <div class="edit-profile">
     <div class="text-center">
       <h1>Editar Perfil</h1>
     </div>
     <hr>
-    <div class="row ">
+    <div class="row justify-content-center  vh-100">
       <!-- left column -->
-      <div class="col-3">
+      <div class="col-4">
         <div class="text-center">
           <img src="{{srcImg}}" class="avatar img-circle" alt="avatar">
           <h6>Selecciona una foto diferente...</h6>
@@ -49,52 +49,42 @@
       </div>
   
       <!-- edit form column -->
-  
       <div class="col-md-4 personal-info ">
-        <div class="alert alert-info alert-dismissable">
-          <a class="panel-close close" data-dismiss="alert">×</a>
-          <i class="fa fa-coffee"></i>
-          This is an <strong>.alert</strong>. Use this to show important messages to the user.
-        </div>
         <h3>Info de tu perfil</h3>
-  
-  
-<form [formGroup]="studentForm" class="form-horizontal" role="form">
-  <div class="form-group">
-    <label class="col-lg-3 control-label text-center">Nombre:</label>
-    <div class="col-lg-8">
-      <input class="form-control" type="text" name="student.name" formControlName="name">
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="col-lg-3 control-label">Apellido:</label>
-    <div class="col-lg-8">
-      <input class="form-control" type="text" name="student.surnames" formControlName="surnames">
-    </div>
-  </div>
+        <form [formGroup]="studentForm" class="form-horizontal" role="form">
+          <div class="form-group">
+            <label class="col-lg-3 control-label">Nombre:</label>
+            <div class="col-lg-8">
+              <input class="form-control" type="text" name="student.name" formControlName="name">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-3 control-label">Apellido:</label>
+            <div class="col-lg-8">
+              <input class="form-control" type="text" name="student.surnames" formControlName="surnames">
+            </div>
+          </div>
 
-  <div class="form-group">
-    <label class="col-lg-3 control-label">Email:</label>
-    <div class="col-lg-8">
-      <input class="form-control" type="text"  name="student.email" formControlName="email">
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="col-md-3 control-label">Username:</label>
-    <div class="col-md-8">
-      <input class="form-control" type="text"  name="student.nickname" formControlName="nickname">
-    </div>
-  </div>
-  <div class="col-md-8">
-    <div class="buttonsavechanges">
-      <input class="btn btn-primary" type="submit" value="Guardar Cambios" (click)="save()">
-      <span></span>
-      <input type="reset" class="btn btn-danger" value="Cancelar Cambios">
-    </div>
-  </div>
-</form>
-
-
+          <div class="form-group">
+            <label class="col-lg-3 control-label">Email:</label>
+            <div class="col-lg-8">
+              <input class="form-control" type="text"  name="student.email" formControlName="email">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3 control-label">Username:</label>
+            <div class="col-md-8">
+              <input class="form-control" type="text"  name="student.nickname" formControlName="nickname">
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="buttonsavechanges">
+              <input class="btn btn-primary" type="submit" value="Guardar Cambios" (click)="save()">
+              <span></span>
+              <input type="reset" class="btn btn-danger" value="Cancelar Cambios">
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
