--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
@@ -1,27 +1,91 @@
+.containerStudent{
+  justify-content: center;
+  align-items: center;
+  margin-left: 250px;
+  margin-top: 5%;
+}
+h2{
+  text-align: center;
+  font-weight: 700;
+  font-size: 80px;
+  color:white;
+
+
+}
+
+.noRankingsContainer{
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+}
+.mainimageContainer{
+  background: #2b2f77;
+  background: -webkit-linear-gradient(0deg, #2b2f77 0%, #141852 50%, #070b34 100%);
+  background: linear-gradient(0deg, #2b2f77 0%, #141852 50%, #070b34 100%);
+  
+  border-radius: 17% 18% 13% 8% / 11% 12% 9% 16%;
+  width: 400px;
+  padding: ;
+}
+
+.mainimageContainer:hover,
+.imageContainer:hover{
+  background: hsla(213, 77%, 14%, 1);
+  background: linear-gradient(90deg, hsla(213, 77%, 14%, 1) 0%, hsla(202, 27%, 45%, 1) 100%);
+  background: -moz-linear-gradient(90deg, hsla(213, 77%, 14%, 1) 0%, hsla(202, 27%, 45%, 1) 100%);
+  background: -webkit-linear-gradient(90deg, hsla(213, 77%, 14%, 1) 0%, hsla(202, 27%, 45%, 1) 100%);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(76,22,195,0.25);
+  border-radius: 17% 18% 13% 8% / 11% 12% 9% 16%;
+  transition: 0.5s ease;
+  rotate: 2deg;
+  
+}
+
+.imageContainer img:hover{
+  transition: 0.5s ease;
+  rotate: 2deg;
+ 
+}
+.imageContainer{
+  padding-top: 20px;
+}
+.imageContainer img{
+  width: 400px;
+  height: 350px;
+}
 .profile-link {
     text-decoration: none;
     color: #333;
   }
-  
   .profile-link:hover {
     text-decoration: underline;
   }
-  
-  .ranking-container {
-    margin-top: 20px;
+  .noRankJoinNew{
+    display: grid;
+    place-items: center;
+    margin-top: 50px;
+
   }
   
   .no-rankings-message {
-    font-size: 2.0rem;
+    font-size: 20px;
     font-weight: bolder;
     text-align: center;
-    margin-top: 0rem;
-    margin-bottom: 0rem;
-    color:white;  
+    color:white;
+
   }
-  
+  p .no-rankings-message {
+    border: 10px solid #ff4f32; /* Borde naranja */
+
+  }
+
+ p.no-rankings-message span{
+  margin-top: 2px;
+ }
   .rankings-message {
-    font-size: 18px;
+    font-size: 30px;
     font-weight: bold;
     margin-bottom: 10px;
   }
@@ -37,68 +101,187 @@
   }
   
   .form-group {
-    margin-top: 10px;
+    margin-top: 5px;
   }
   
   .form-label {
 
     display: flex;
     justify-content: center;
-    margin:0 auto;
+    margin:15px auto;
     font-size: 21px;
-    color:White;
+    color:white;
   }
   
   .form-control {
-    width: 40%;
+    width: 80%;
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-    margin:2rem auto;
+    margin:1rem auto;
   }
   
-  .btn {
-    cursor: pointer;
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: #fff;
-    transition: background-color 0.3s ease;
-    display: block;
-    margin: 0 auto;
-  }
-  
-  .btn:hover {
-    background-color: #0062cc;
-  }
   .img, svg{
     width: 2rem !important; 
     height: 2rem !important;
   }
-  .limitsContainer{
-    margin: 0 auto;
-    margin-left: 0px;
-  }
-
- .ranking-container .roboimage img  , svg{
-    /* display: block;
-    margin: 0 auto;
-    width: 30rem !important;
-    height: 21rem !important; */
-  }
-
-  /* .limitsContainer {
-     margin-left: 250px; 
-     background-image: linear-gradient(0deg, #2b2f77 0%, #141852 50%, #070b34 100%) !important; 
-  } */
-
-   .row .col-md-8{
-    margin-left: 15.62rem;
-    margin-top: 5rem;
-  } 
 
   /* content no ranking */
+/* boton */
+  .neon {
+    width: -webkit-fill-available;
+    height: 60px;
+    background: #e92197;
+    border: 10px solid #d11d87;
+    border-radius: 20px;
+    text-align: center;
+    -webkit-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
+    -moz-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
+    box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
+    background: #30fbd7;
+    border: 10px solid #2be1c1;
+    -webkit-box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
+    -moz-box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
+    box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
+    transition: ease 0.3s;
+    margin: 20px 0;
+    color: black;
+    font-weight: 700;
+    font-size: 20px;
+
+  }
   
+  .neon:hover {
+    background: #e92197;
+    border: 10px solid #d11d87;
+    -webkit-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
+    -moz-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
+    box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
+    color: black;
+  }
+  
+  
+  
+  .neon:hover > span {
+    color: #fff;
+    letter-spacing: 0.4em;
+  }
+  
+  .neon span {
+    font-size: 15px;
+    color: #222;
+    text-align: center;
+    line-height: 40px;
+    font-family: 'Nunito', sans-serif !important;
+    font-weight: 300;
+    letter-spacing: 0.2em;
+    transition: ease 0.3s;
+  }
+
+  .destacados{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    }
+    
+    .destacados::before{
+        content: 'Rankings';
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 600;
+        font-size: 12em;
+        color: rgba(0, 0, 0, 0.20);
+    }
+
+    /* CARD RANKINGCITO */
+    .rankingcito{
+      position: relative;
+      width: 45%;
+      height: 200px;
+      margin: 40px 20px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      transition: all .5s;
+      /* background: linear-gradient(45deg, #10214c, #c31c7e); */
+      background: #606c88;
+      background: -webkit-linear-gradient(0deg, #606c88 0%, #3f4c6b 100%);
+      background: linear-gradient(0deg, #606c88 0%, #3f4c6b 100%); 
+        
+      
+    }
+    .rankingcito:hover{
+      -webkit-box-shadow: 0 0 17px 5.5px #c4c2c3;
+      -moz-box-shadow: 0 0 17px 5.5px #e8e5e7;
+      box-shadow: 0 0 17px 5.5px #f5f4f4;
+    }
+
+  .rankingcito img{
+    /* background-image: url("https://i.imgur.com/M6lHbsV.png"); */
+    position: absolute;
+    top:0%;
+    left:90%;
+    bottom:0;
+    transform: translate(-50%);
+    height: 200px;
+    z-index: 1;
+    opacity: 0.7;
+    transition: all .5s;
+}
+
+.rankingcito:hover img{
+    left: 85%;
+    z-index: 2;
+    height: 200px;
+    transition: all .5s;
+    opacity: 1;
+}
+.btn{
+  z-index: 1 !important;
+}
+.btn:hover{
+  z-index: 1 !important;
+}
+
+.rankingcito .contencito{
+    position: relative;
+    width: 50%;
+    left: 15%;
+    padding: 20px 20px 20px 40px;
+    color: white;
+    opacity: 1;
+    transition: all .5s;
+    margin-left: -2px;
+}
+
+.rankingcito:hover .contencito{
+    left: 0;
+    opacity: 1;
+}
+
+.rankingcito .contencito h2{
+    text-transform: uppercase;
+    font-size: 2.2em;
+    line-height: 1em;
+}
+
+.rankingcito .contencito a{
+    position: relative;
+    background: white;
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-weight: 700;
+}
+
+h3{
+  font-size: 2.2em;
+  line-height: 1em;
+}
+
+    
