--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -1,123 +1,138 @@
-<div *ngIf="!showPracticasComponent">
-  <h2 class="ranking-header">Ranking #{{ rankingId }}</h2>
-
-  <div *ngIf="teacher && teacher.email !== ''">
-    <button (click)="changeCodeRank()">Regenerar Codigo Ranking</button>
-  </div>
-  <table *ngIf="student && student.email !== ''">
-    <thead>
-      <tr>
-        <th>Nombre</th>
-        <th>Descripción</th>
-        <th>Puntos</th>
-        <th>Fecha límite</th>
-        <th>Entregar archivo</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let practica of practicas">
-        <td>{{ practica.name }}</td>
-        <td>{{ practica.description }}</td>
-        <td>{{ practica.points_practice }}</td>
-        <td>{{ practica.deadline_practice | date:'shortDate' }}</td>
-        <td>
-          <input type="file" (change)="onFileSelected($event,practica.id)" />
-          <button (click)="uploadFile(practica.id)">Subir</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div *ngIf="nuevaTarea">
-    <form>
-      <label>Nombre:</label>
-      <input type="text" name="tarea.name" id="tarea.name" [(ngModel)]="tarea.name"><br>
-      <label>Descripción:</label>
-      <textarea name="description" id="description" [(ngModel)]="tarea.description"></textarea><br>
-      <label>Fecha límite:</label>
-      <input type="date" name="deadline_practice" id="deadline_practice" [(ngModel)]="tarea.deadline_practice"><br>
-      <button type="submit" (click)="agregarTarea()">Agregar tarea</button>
-      <button type="button" (click)="nuevaTarea = false">Cancelar</button>
-    </form>
-  </div>
-
-  <button *ngIf="!nuevaTarea && teacher && teacher.email !== ''" (click)="nuevaTarea = true">Añadir nueva Tarea</button>
-
-  <table *ngIf="!nuevaTarea" class="ranking-table">
-    <thead>
-      <tr>
-        <th>Posición</th>
-        <th>Nombre</th>
-        <th>Puntuación</th>
-        <th>SoftSkills</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let analysis of rankingAnalises; let i = index">
-        <ng-container *ngIf="analysis.accepted == 1">
-          <td>{{ i + 1 }}</td>
-          <td>{{ analysis.name }}</td>
-          <td>{{ analysis.points }}</td>
-          <td>
-            <img [src]="analysis.imageUrls.emotional" alt="Emotional Rank Image" width="50" height="50" />
-            <img [src]="analysis.imageUrls.thinking" alt="Thinking Rank Image" width="50" height="50" />
-            <img [src]="analysis.imageUrls.responsability" alt="responsability Rank Image" width="50" height="50" />
-            <img [src]="analysis.imageUrls.cooperation" alt="cooperation Rank Image" width="50" height="50" />
-            <img [src]="analysis.imageUrls.initiative" alt="initiative Rank Image" width="50" height="50" />
-          </td>
-          <td *ngIf="teacher && teacher.email !== ''">
-            <button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar</button>
-          </td>
-          <td *ngIf="teacher && teacher.email !== ''">
-            <input #newPoints name="new_points" type="number">
-            <button (click)="editarPuntos(analysis.id_rank,analysis.id_student,+newPoints.value)">Editar</button>
-          </td>
-          <td *ngIf="teacher && teacher.email !== ''">
-            <button (click)="verPracticas(analysis.id_student)">Ver Pracricas</button>
-          </td>
-        </ng-container>
-      </tr>
-    </tbody>
-  </table>
-
-  <div *ngIf="!nuevaTarea &&teacher && teacher.email !== ''" class="Request">
-    <h2>Solicitudes para unirse a este ranking</h2>
-    <div class="containertablerequest">
-      <table>
-        <thead>
-          <tr>
-            <th>Nombre alumno</th>
-            <th>Id del Ranking</th>
-            <th>Estado</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let analysis of rankingAnalises; let i = index">
-            <div *ngIf="analysis.accepted == 0">
-              <td>{{ analysis.name }}</td>
-              <td>{{ analysis.id_rank}}</td>
-              <td>{{ analysis.accepted }}</td>
-              <td *ngIf="teacher && teacher.email !== ''">
-                <button (click)="acceptStudent(analysis.id_student,analysis.id_rank)" class="btn btn-success">Aceptar al
-                  ranking</button>
-                <button (click)="denegateStudent(analysis.id_student,analysis.id_rank)" class="btn btn-danger">Eliminar
-                  solicitud</button>
-              </td>
-            </div>
-          </tr>
-        </tbody>
-      </table>
+<div class="RankingContenedor">
+  <div *ngIf="!showPracticasComponent">
+    <h2 class="ranking-header">Ranking #{{ rankingId }}</h2>
+  
+    <div *ngIf="teacher && teacher.email !== ''">
+      <button (click)="changeCodeRank()">Regenerar Codigo Ranking</button>
     </div>
-
+    <table *ngIf="student && student.email !== ''">
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Descripción</th>
+          <th>Puntos</th>
+          <th>Fecha límite</th>
+          <th>Entregar archivo</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let practica of practicas">
+          <td>{{ practica.name }}</td>
+          <td>{{ practica.description }}</td>
+          <td>{{ practica.points_practice }}</td>
+          <td>{{ practica.deadline_practice | date:'shortDate' }}</td>
+          <td>
+            <input type="file" (change)="onFileSelected($event,practica.id)" />
+            <button (click)="uploadFile(practica.id)">Subir</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  
+    <div *ngIf="nuevaTarea">
+      <form>
+        <label>Nombre:</label>
+        <input type="text" name="tarea.name" id="tarea.name" [(ngModel)]="tarea.name"><br>
+        <label>Descripción:</label>
+        <textarea name="description" id="description" [(ngModel)]="tarea.description"></textarea><br>
+        <label>Fecha límite:</label>
+        <input type="date" name="deadline_practice" id="deadline_practice" [(ngModel)]="tarea.deadline_practice"><br>
+        <button type="submit" (click)="agregarTarea()">Agregar tarea</button>
+        <button type="button" (click)="nuevaTarea = false">Cancelar</button>
+      </form>
+    </div>
+  
+    <button *ngIf="!nuevaTarea && teacher && teacher.email !== ''" (click)="nuevaTarea = true">Añadir nueva Tarea</button>
+  
+    <table *ngIf="!nuevaTarea" class="ranking-table">
+      <thead>
+        <tr>
+          <th>Posición</th>
+          <th>Nombre</th>
+          <th>Puntuación</th>
+          <th>Emocional</th>
+          <th>Pensamiento</th>
+          <th>Responsabilidad</th>
+          <th>Cooperacion</th>
+          <th>Iniciativa</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let analysis of rankingAnalises; let i = index">
+          <ng-container *ngIf="analysis.accepted == 1">
+            <td>{{ i + 1 }}</td>
+            <td>{{ analysis.name }}</td>
+            <td>{{ analysis.points }}</td>
+            <td>
+              <img [src]="analysis.imageUrls.emotional" alt="Emotional Rank Image" width="50" height="50" />
+            </td>
+            <td>
+              <img [src]="analysis.imageUrls.thinking" alt="Thinking Rank Image" width="50" height="50" />
+            </td>
+            <td>
+              <img [src]="analysis.imageUrls.responsability" alt="responsability Rank Image" width="50" height="50" />
+            </td>
+            <td>
+              <img [src]="analysis.imageUrls.cooperation" alt="cooperation Rank Image" width="50" height="50" />
+            </td>
+            <td>
+              <img [src]="analysis.imageUrls.initiative" alt="initiative Rank Image" width="50" height="50" />
+            </td>
+            <td *ngIf="teacher && teacher.email !== ''">
+              <button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar</button>
+            </td>
+            <td *ngIf="teacher && teacher.email !== ''">
+              <input #newPoints name="new_points" type="number">
+              <button (click)="editarPuntos(analysis.id_rank,analysis.id_student,+newPoints.value)">Editar</button>
+            </td>
+            <td *ngIf="teacher && teacher.email !== ''">
+              <button (click)="verPracticas(analysis.id_student)">Ver Pracricas</button>
+            </td>
+          </ng-container>
+        </tr>
+      </tbody>
+    </table>
+  
+    <div *ngIf="!nuevaTarea &&teacher && teacher.email !== ''" class="Request">
+      <h2>Solicitudes para unirse a este ranking</h2>
+      <div class="containertablerequest">
+        <table>
+          <thead>
+            <tr>
+              <th>Nombre alumno</th>
+              <th>Id del Ranking</th>
+              <th>Estado</th>
+              <th>Acciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let analysis of rankingAnalises; let i = index">
+              <div *ngIf="analysis.accepted == 0">
+                <td>{{ analysis.name }}</td>
+                <td>{{ analysis.id_rank}}</td>
+                <td>{{ analysis.accepted }}</td>
+                <td *ngIf="teacher && teacher.email !== ''">
+                  <button (click)="acceptStudent(analysis.id_student,analysis.id_rank)" class="btn btn-success">Aceptar al
+                    ranking</button>
+                  <button (click)="denegateStudent(analysis.id_student,analysis.id_rank)" class="btn btn-danger">Eliminar
+                    solicitud</button>
+                </td>
+              </div>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+  
+    </div>
+  
+    <div *ngIf="!rankingAnalises" class="loading-message">Cargando...</div>
+    <div *ngIf="!rankingAnalises" class="error-message">No se encontraron datos del ranking.</div>
   </div>
-
-  <div *ngIf="!rankingAnalises" class="loading-message">Cargando...</div>
-  <div *ngIf="!rankingAnalises" class="error-message">No se encontraron datos del ranking.</div>
+  
+  <div *ngIf="showPracticasComponent">
+    <app-practicas *ngIf="showPracticasComponent" [rankingId]="rankingId" [practicasDelivered]="practicesDelivered"
+      (onPracticeSelected)="verPracticas($event)" (goBack)="showPracticasComponent = false"></app-practicas>
+  
+  </div>
 </div>
 
-<div *ngIf="showPracticasComponent">
-  <app-practicas *ngIf="showPracticasComponent" [rankingId]="rankingId" [practicasDelivered]="practicesDelivered"
-    (onPracticeSelected)="verPracticas($event)" (goBack)="showPracticasComponent = false"></app-practicas>
-
-</div>
