--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -134,5 +134,6 @@
       (onPracticeSelected)="verPracticas($event)" (goBack)="showPracticasComponent = false"></app-practicas>
   
   </div>
-</div>
+  <button [routerLink]="['/soft-skill-evaluation', rankingId]">Evaluar Soft Skills</button>
 
+</div>
