add camp to ranking

--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -56,6 +56,18 @@
           <th>Responsabilidad</th>
           <th>Cooperacion</th>
           <th>Iniciativa</th>
+          <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''">
+            Eliminar
+          </th>
+          
+          <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''">
+            Editar Puntos
+          </th>
+          
+          <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''">
+            Ver Practica
+          </th>
+
         </tr>
       </thead>
       <tbody>
