--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -141,5 +141,7 @@
   
   </div>
   <button [routerLink]="['/soft-skill-evaluation', rankingId]">Evaluar Soft Skills</button>
+  <button *ngIf="!nuevaTarea &&teacher && teacher.email !== ''" [routerLink]="['/history-skills', rankingId]">Ir a historial</button>
+
 
 </div>
