--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
@@ -34,11 +34,13 @@
                 <h2 class="rankings-message">Estas matriculado en los siguientes rankings:</h2>
                   <section id="destacados" class="destacados">
                     <div class="rankingcito" *ngFor="let ranking of rankings">
-                      <div class="contencito">
-                        <h3>{{ ranking.name }}</h3>
-                      <button (click)="verRanking(ranking.id)" type="button" class="btn btn-outline-info">Ver Ranking</button>
-                      </div>
-                      <img [src]="ranking.image" alt="">
+                      <ng-container *ngIf="ranking.accepted == 1">
+                        <div class="contencito">
+                          <h3>{{ ranking.name }}</h3>
+                          <button (click)="verRanking(ranking.id)" type="button" class="btn btn-outline-info">Ver Ranking</button>
+                        </div>
+                        <img [src]="ranking.image" alt="">
+                      </ng-container>
                     </div>
                   </section>
               </ng-template>
