--- a/Angular/proyectoFinal/src/app/paginas/history-skills/history-skills.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/history-skills/history-skills.component.html
@@ -1,3 +1,23 @@
 <div class="containerHistory">
-    <h1>Historial</h1>
+    <table class="ranking-table" *ngIf="teacher && teacher.email !== ''">
+        <thead>
+            <tr>
+                <th>Estudiante que envia</th>
+                <th>Estudiante que resibe</th>
+                <th>Puntos</th>
+                <th>Fecha</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let histori of historial">
+                <td>{{ histori.evaluator_student_id }}</td>
+                <td>{{ histori.evaluated_student_id }}</td>
+                <td>{{ histori.points }}</td>
+                <td>{{ histori.created_at }}</td>
+                <td><button (click)="deleteStudentEvaluation(histori.id)">Eliminar</button></td>
+            </tr>
+        </tbody>
+    </table>
+
 </div>
