--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
@@ -26,7 +26,7 @@ h2{
   
   border-radius: 17% 18% 13% 8% / 11% 12% 9% 16%;
   width: 400px;
-  padding: ;
+  padding: 0;
 }
 
 .mainimageContainer:hover,
@@ -201,7 +201,7 @@ h2{
     /* CARD RANKINGCITO */
     .rankingcito{
       position: relative;
-      width: 45%;
+      width: 100%;
       height: 200px;
       margin: 40px 20px;
       display: flex;
