--- a/Angular/proyectoFinal/src/app/paginas/student-soft-skill-evaluation/student-soft-skill-evaluation.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-soft-skill-evaluation/student-soft-skill-evaluation.component.html
@@ -3,7 +3,7 @@
         <div>
           <label for="evaluatedStudentId">Estudiante evaluado:</label>
           <select id="evaluatedStudentId" formControlName="evaluatedStudentId">
-            <option *ngFor="let student of rankingAnalises" [value]="student.id">{{ student.name }}</option>
+            <option *ngFor="let student of rankingAnalises" [value]="student.id_student">{{ student.name }}</option>
           </select>
           <div *ngIf="evaluationForm.get('evaluatedStudentId')?.errors?.['selfEvaluation']">
             No puedes evaluarte a ti mismo.
