--- a/Angular/proyectoFinal/src/app/paginas/student-soft-skill-evaluation/student-soft-skill-evaluation.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-soft-skill-evaluation/student-soft-skill-evaluation.component.html
@@ -19,6 +19,9 @@
           <label for="points">Puntos:</label>
           <input type="number" id="points" formControlName="points" min="0" max="50" />
         </div>
+        <div *ngIf="evaluationForm.get('points')?.errors?.['pointsExceeded']">
+          No puedes asignar más puntos de los que tienes disponibles.
+        </div>
         <button type="submit">Enviar evaluación</button>
       </form>
 </div>
