--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -1,35 +1,44 @@
 <div class="RankingContenedor">
-  <div *ngIf="!showPracticasComponent">
-    <h2 class="ranking-header">Ranking #{{ rankingId }}</h2>
+
+  <!-- NO SE MUESTRA CONTENEDOR PRACTICA -->
+  <div *ngIf="!showPracticasComponent"> 
+     <h1 class="ranking-header text-center">Ranking #{{ rankingId }}</h1>  <!--TITULO RANKING -->
 
     <div *ngIf="teacher && teacher.email !== ''">
-      <button (click)="changeCodeRank()">Regenerar Codigo Ranking</button>
+      <button class="btn btn-outline-info btn-sm" (click)="changeCodeRank()">Regenerar Codigo Ranking ♻️</button> <!--boton regenerar codigo -->
     </div>
-    <table *ngIf="student && student.email !== ''">
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Descripción</th>
-          <th>Puntos</th>
-          <th>Fecha límite</th>
-          <th>Entregar archivo</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let practica of practicas">
-          <td>{{ practica.name }}</td>
-          <td>{{ practica.description }}</td>
-          <td>{{ practica.points_practice }}</td>
-          <td>{{ practica.deadline_practice | date:'shortDate' }}</td>
-          <td>
-            <input type="file" (change)="onFileSelected($event,practica.id)" />
-            <button (click)="uploadFile(practica.id)">Subir</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
 
-    <div *ngIf="nuevaTarea">
+    <div class="table-responsive">  <!--TABLA PARA PRACTICA  -->
+      <table class="table table-dark" *ngIf="student && student.email !== ''">
+
+        <thead class="thead-light"> <!--FILA CABECERA DE DESCRIPCION DE PRACTICA -->
+          <tr>
+            <th>Nombre</th>
+            <th>Descripción</th>
+            <th>Puntos</th>
+            <th>Fecha límite</th>
+            <th>Entregar archivo</th>
+          </tr>
+        </thead>
+
+        <tbody> <!--FILA CONTENIDO DE RANKING -->
+          <tr *ngFor="let practica of practicas">
+            <td>{{ practica.name }}</td>
+            <td>{{ practica.description }}</td>
+            <td>{{ practica.points_practice }}</td>
+            <td>{{ practica.deadline_practice | date:'shortDate' }}</td>
+            <td>
+              <input type="file" (change)="onFileSelected($event,practica.id)" /> <!--SUBIR ARCHIVO -->
+              <button (click)="uploadFile(practica.id)">Subir</button>
+            </td>
+          </tr>
+        </tbody>
+
+      </table>
+    </div>
+ 
+
+    <div *ngIf="nuevaTarea"> <!--AÑADIR TAREA-->
       <form>
         <label>Nombre:</label>
         <input type="text" name="tarea.name" id="tarea.name" [(ngModel)]="tarea.name"><br>
@@ -42,65 +51,59 @@
       </form>
     </div>
 
-    <button *ngIf="!nuevaTarea && teacher && teacher.email !== ''" (click)="nuevaTarea = true">Añadir nueva
-      Tarea</button>
+    <button class="btn btn-outline-info btn-sm"*ngIf="!nuevaTarea && teacher && teacher.email !== ''" (click)="nuevaTarea = true">Añadir nueva Tarea ➕</button> <!--BOTON AÑADIR TAREA -->
+      
+      <div class="table-responsive">  
+        <table *ngIf="!nuevaTarea" class="table table-dark table-bordered text-center">
+          <thead class="thead-light"><!--FILAS CABECERA DE RANKING -->
+            <tr>
+              <th>Posición 🏆</th>
+              <th>Nombre 👀</th>
+              <th>Puntuación 💠</th>
+              <th>Emocional 😃</th>
+              <th>Pensamiento 🧠</th>
+              <th>Responsabilidad 🫵🏻</th>
+              <th>Cooperacion 👥</th>
+              <th>Iniciativa ☝🏻</th>
+              <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''"> Eliminar 🗑️</th> <!--FILASCABECERA DE RANKING DISP. SOLO PROFESOR -->
+              <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''"> Editar Puntos 📝</th>
+              <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''"> Ver Practica 🧐</th>
+            </tr>
+          </thead>
 
-    <table *ngIf="!nuevaTarea" class="ranking-table">
-      <thead>
-        <tr>
-          <th>Posición</th>
-          <th>Nombre</th>
-          <th>Puntuación</th>
-          <th>Emocional</th>
-          <th>Pensamiento</th>
-          <th>Responsabilidad</th>
-          <th>Cooperacion</th>
-          <th>Iniciativa</th>
-          <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''">
-            Eliminar
-          </th>
-          
-          <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''">
-            Editar Puntos
-          </th>
-          
-          <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''">
-            Ver Practica
-          </th>
+          <tbody>  <!--FILAS CUERPO DE RANKING -->
+            <tr *ngFor="let analysis of rankingAnalises; let i = index">
+              <ng-container *ngIf="analysis.accepted == 1">
+                <td>{{ i + 1 }}</td>  <!--POSICION -->
+                <td>{{ analysis.name }}</td> <!--NOMBRE -->
+                <td>{{ analysis.points }}</td> <!--PUNTUACION -->
+                <td *ngFor="let skill of softSkills">  <!--soft skills -->
+                  <img (click)="descriptionSoftSkills(analysis,skill)"
+                    [src]="analysis.imageUrls.get(skill)" alt="skill Rank Image" width="50" height="50"
+                    title="{{analysis.skillsNumber.get(skill)}}"/>
+                </td>
+                <td *ngIf="teacher && teacher.email !== ''">  <!--ACCIONES DISP. SOLO PROFESO (ELIMINAR) -->
+                  <button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar 🗑️</button>
+                </td>
+                <td *ngIf="teacher && teacher.email !== ''">
+                  <input #newPoints name="new_points" type="number">
+                  <button (click)="editarPuntos(analysis.id_rank,analysis.id_student,+newPoints.value)">Editar 📝</button> <!--ACCIONES DISP. SOLO PROFESOR (EDITAR) -->
+                </td>
+                <td *ngIf="teacher && teacher.email !== ''">
+                  <button (click)="verPracticas(analysis.id_student)">Ver Practicas</button> <!--ACCIONES DISP. SOLO PROFESOR (ver practicas) -->
+                </td>
+              </ng-container>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let analysis of rankingAnalises; let i = index">
-          <ng-container *ngIf="analysis.accepted == 1">
-            <td>{{ i + 1 }}</td>
-            <td>{{ analysis.name }}</td>
-            <td>{{ analysis.points }}</td>
-            <td *ngFor="let skill of softSkills">
-              <img (click)="descriptionSoftSkills(analysis,skill)"
-                [src]="analysis.imageUrls.get(skill)" alt="skill Rank Image" width="50" height="50"
-                title="{{analysis.skillsNumber.get(skill)}}"/>
-            </td>
-            <td *ngIf="teacher && teacher.email !== ''">
-              <button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar</button>
-            </td>
-            <td *ngIf="teacher && teacher.email !== ''">
-              <input #newPoints name="new_points" type="number">
-              <button (click)="editarPuntos(analysis.id_rank,analysis.id_student,+newPoints.value)">Editar</button>
-            </td>
-            <td *ngIf="teacher && teacher.email !== ''">
-              <button (click)="verPracticas(analysis.id_student)">Ver Pracricas</button>
-            </td>
-          </ng-container>
-        </tr>
-      </tbody>
-    </table>
-
-    <div *ngIf="!nuevaTarea &&teacher && teacher.email !== ''" class="Request">
-      <h2>Solicitudes para unirse a este ranking</h2>
-      <div class="containertablerequest">
-        <table>
-          <thead>
+      <!--SOLICITUDES PARA UNIRSE A RANKING SOLO DISP. PARA PROFESOR-->
+    <!-- <div *ngIf="!nuevaTarea &&teacher && teacher.email !== ''" class="Request"> 
+      <h2>Solicitudes para unirse a este ranking 👥</h2>
+      <div class="table-responsive">
+        <table class="table">
+          <thead class="thead-dark">
             <tr>
               <th>Nombre alumno</th>
               <th>Id del Ranking</th>
@@ -115,33 +118,61 @@
                 <td>{{ analysis.id_rank}}</td>
                 <td>{{ analysis.accepted }}</td>
                 <td *ngIf="teacher && teacher.email !== ''">
-                  <button (click)="acceptStudent(analysis.id_student,analysis.id_rank)" class="btn btn-success">Aceptar
-                    al
-                    ranking</button>
-                  <button (click)="denegateStudent(analysis.id_student,analysis.id_rank)"
-                    class="btn btn-danger">Eliminar
-                    solicitud</button>
+                  <button (click)="acceptStudent(analysis.id_student,analysis.id_rank)" class="btn btn-outline-success btn-sm">Aceptar solicitud ✅</button>
+                  <button (click)="denegateStudent(analysis.id_student,analysis.id_rank)"class="btn btn-outline-danger btn-sm">Eliminar solicitud 🗑️</button>
                 </td>
               </div>
             </tr>
           </tbody>
         </table>
       </div>
-
+    </div> -->
+    <div *ngIf="!nuevaTarea && teacher && teacher.email !== ''" class="Request"> <!--SOLICITUDES PARA UNIRSE A RANKING SOLO DISP. PARA PROFESOR-->
+      <h2 class="text-center">Solicitudes para unirse a este ranking 👥</h2>
+      <div class="table-responsive text-center">
+        <table class="table table-bordered table-dark mx-auto" style="width: auto;">
+          <thead class="thead-dark">
+            <tr>
+              <th class="font-weight-bold">Nombre alumno</th>
+              <th class="font-weight-bold">Id del Ranking</th>
+              <th class="font-weight-bold">Estado</th>
+              <th class="font-weight-bold">Acciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let analysis of rankingAnalises; let i = index">
+              <ng-container *ngIf="analysis.accepted == 0">
+                <td>{{ analysis.name }}</td>
+                <td>{{ analysis.id_rank}}</td>
+                <td>{{ analysis.accepted }}</td>
+                <td *ngIf="teacher && teacher.email !== ''">
+                  <button (click)="acceptStudent(analysis.id_student,analysis.id_rank)" class="btn btn-outline-success btn-sm">Aceptar solicitud ✅</button>
+                  <button (click)="denegateStudent(analysis.id_student,analysis.id_rank)"class="btn btn-outline-danger btn-sm">Eliminar solicitud 🗑️</button>
+                </td>
+              </ng-container>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
+    
+    
 
     <div *ngIf="!rankingAnalises" class="loading-message">Cargando...</div>
     <div *ngIf="!rankingAnalises" class="error-message">No se encontraron datos del ranking.</div>
   </div>
 
+  <!--AHORA SE MUESTRA CONTENEDOR PRACTICA -->
   <div *ngIf="showPracticasComponent">
     <app-practicas *ngIf="showPracticasComponent" [rankingId]="rankingId" [practicasDelivered]="practicesDelivered"
       (onPracticeSelected)="verPracticas($event)" (goBack)="showPracticasComponent = false"></app-practicas>
 
   
   </div>
+
+  <!-- SECCION SOFTS SKILLS -->
   <button  *ngIf="student && student.email !== ''" [routerLink]="['/soft-skill-evaluation', rankingId]">Evaluar Soft Skills</button>
-  <button *ngIf="!nuevaTarea &&teacher && teacher.email !== ''" [routerLink]="['/history-skills', rankingId]">Ir a historial Soft Skills</button>
+  <button class="btn btn-outline-info"*ngIf="!nuevaTarea &&teacher && teacher.email !== ''" [routerLink]="['/history-skills', rankingId]">Ir a historial Soft Skills</button>
 
 
 </div>
