--- a/Angular/proyectoFinal/src/app/paginas/history-skills/history-skills.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/history-skills/history-skills.component.html
@@ -3,7 +3,7 @@
         <thead>
             <tr>
                 <th>Estudiante que envia</th>
-                <th>Estudiante que resibe</th>
+                <th>Estudiante que recibe</th>
                 <th>Puntos</th>
                 <th>Fecha</th>
                 <th>Action</th>
