--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.css
@@ -19,6 +19,21 @@
    img{
     width:50px;
     height: 50px;
-  }  
+  } 
+  
+  .btn-info{
+    margin-top:3px;
+  }
+
+  .btn-outline-info{
+    margin-top:5px;
+    margin-bottom: 5px;
+  }
+
+  h2{
+    font-size: 35px;
+    font-weight: bold;
+  }
+
 
   
