--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -2,9 +2,9 @@
 
   <!-- NO SE MUESTRA CONTENEDOR PRACTICA -->
   <div *ngIf="!showPracticasComponent"> 
-     <h1 class="ranking-header text-center">Ranking #{{ rankingId }}</h1>  <!--TITULO RANKING -->
+     <h2 class="ranking-header text-center">Ranking #{{ rankingId }}</h2>  <!--TITULO RANKING -->
 
-    <div *ngIf="teacher && teacher.email !== ''">
+    <div class="d-flex justify-content-start"*ngIf="teacher && teacher.email !== ''">
       <button class="btn btn-outline-info btn-sm" (click)="changeCodeRank()">Regenerar Codigo Ranking ♻️</button> <!--boton regenerar codigo -->
     </div>
 
@@ -51,23 +51,26 @@
       </form>
     </div>
 
-    <button class="btn btn-outline-info btn-sm"*ngIf="!nuevaTarea && teacher && teacher.email !== ''" (click)="nuevaTarea = true">Añadir nueva Tarea ➕</button> <!--BOTON AÑADIR TAREA -->
+    <div class="d-flex justify-content-start">
+      <button class="btn btn-outline-info btn-sm"*ngIf="!nuevaTarea && teacher && teacher.email !== ''" (click)="nuevaTarea = true">Añadir nueva Tarea ➕</button> <!--BOTON AÑADIR TAREA -->
+    </div>
       
       <div class="table-responsive">  
         <table *ngIf="!nuevaTarea" class="table table-dark table-bordered text-center">
           <thead class="thead-light"><!--FILAS CABECERA DE RANKING -->
             <tr>
               <th>Posición 🏆</th>
-              <th>Nombre 👀</th>
+              <th>Nombre 👤</th>
               <th>Puntuación 💠</th>
               <th>Emocional 😃</th>
               <th>Pensamiento 🧠</th>
               <th>Responsabilidad 🫵🏻</th>
               <th>Cooperacion 👥</th>
               <th>Iniciativa ☝🏻</th>
-              <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''"> Eliminar 🗑️</th> <!--FILASCABECERA DE RANKING DISP. SOLO PROFESOR -->
+              <!--FILASCABECERA DE RANKING DISP. SOLO PROFESOR -->
+              <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''"> Eliminar ⚠️</th> 
               <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''"> Editar Puntos 📝</th>
-              <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''"> Ver Practica 🧐</th>
+              <th *ngIf="!nuevaTarea && teacher && teacher.email !== ''"> Ver Practica 🔎</th>
             </tr>
           </thead>
 
@@ -83,14 +86,14 @@
                     title="{{analysis.skillsNumber.get(skill)}}"/>
                 </td>
                 <td *ngIf="teacher && teacher.email !== ''">  <!--ACCIONES DISP. SOLO PROFESO (ELIMINAR) -->
-                  <button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar 🗑️</button>
+                  <button class="btn btn-danger btn-sm"(click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar ⚠️</button>
                 </td>
                 <td *ngIf="teacher && teacher.email !== ''">
                   <input #newPoints name="new_points" type="number">
-                  <button (click)="editarPuntos(analysis.id_rank,analysis.id_student,+newPoints.value)">Editar 📝</button> <!--ACCIONES DISP. SOLO PROFESOR (EDITAR) -->
+                  <button class="btn btn-info btn-sm"(click)="editarPuntos(analysis.id_rank,analysis.id_student,+newPoints.value)">Editar 📝</button> <!--ACCIONES DISP. SOLO PROFESOR (EDITAR) -->
                 </td>
                 <td *ngIf="teacher && teacher.email !== ''">
-                  <button (click)="verPracticas(analysis.id_student)">Ver Practicas</button> <!--ACCIONES DISP. SOLO PROFESOR (ver practicas) -->
+                  <button class="btn btn-info btn-sm"(click)="verPracticas(analysis.id_student)">Ver Practicas</button> <!--ACCIONES DISP. SOLO PROFESOR (ver practicas) -->
                 </td>
               </ng-container>
             </tr>
@@ -99,34 +102,6 @@
       </div>
 
       <!--SOLICITUDES PARA UNIRSE A RANKING SOLO DISP. PARA PROFESOR-->
-    <!-- <div *ngIf="!nuevaTarea &&teacher && teacher.email !== ''" class="Request"> 
-      <h2>Solicitudes para unirse a este ranking 👥</h2>
-      <div class="table-responsive">
-        <table class="table">
-          <thead class="thead-dark">
-            <tr>
-              <th>Nombre alumno</th>
-              <th>Id del Ranking</th>
-              <th>Estado</th>
-              <th>Acciones</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let analysis of rankingAnalises; let i = index">
-              <div *ngIf="analysis.accepted == 0">
-                <td>{{ analysis.name }}</td>
-                <td>{{ analysis.id_rank}}</td>
-                <td>{{ analysis.accepted }}</td>
-                <td *ngIf="teacher && teacher.email !== ''">
-                  <button (click)="acceptStudent(analysis.id_student,analysis.id_rank)" class="btn btn-outline-success btn-sm">Aceptar solicitud ✅</button>
-                  <button (click)="denegateStudent(analysis.id_student,analysis.id_rank)"class="btn btn-outline-danger btn-sm">Eliminar solicitud 🗑️</button>
-                </td>
-              </div>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div> -->
     <div *ngIf="!nuevaTarea && teacher && teacher.email !== ''" class="Request"> <!--SOLICITUDES PARA UNIRSE A RANKING SOLO DISP. PARA PROFESOR-->
       <h2 class="text-center">Solicitudes para unirse a este ranking 👥</h2>
       <div class="table-responsive text-center">
@@ -171,7 +146,7 @@
   </div>
 
   <!-- SECCION SOFTS SKILLS -->
-  <button  *ngIf="student && student.email !== ''" [routerLink]="['/soft-skill-evaluation', rankingId]">Evaluar Soft Skills</button>
+  <button  class="btn btn-outline-info" **ngIf="student && student.email !== ''" [routerLink]="['/soft-skill-evaluation', rankingId]">Evaluar Soft Skills</button>
   <button class="btn btn-outline-info"*ngIf="!nuevaTarea &&teacher && teacher.email !== ''" [routerLink]="['/history-skills', rankingId]">Ir a historial Soft Skills</button>
 
 
