--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
@@ -39,7 +39,7 @@
             <h3>{{ ranking.name }}</h3>
             <button (click)="verRanking(ranking.id)" type="button" class="btn btn-outline-info">Ver Ranking</button>
           </div>
-          <img [src]="ranking.image" alt="">
+          <!-- <img [src]="ranking.image" alt=""> -->
         </div>
     </section>
   </ng-template>
