--- a/Angular/proyectoFinal/src/app/paginas/history-skills/history-skills.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/history-skills/history-skills.component.css
@@ -1,8 +1,9 @@
 .containerHistory{
     margin-left: 250px;
+    margin-top: 30px;
 }
 
-.ranking-table {
+/* .ranking-table {
     border-collapse: collapse;
     margin-bottom: 20px;
     width: 100%;
@@ -12,4 +13,10 @@
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
+  } */
+
+
+  h2{
+    font-size: 30px;
+    font-weight: bold;
   }
