--- a/Angular/proyectoFinal/src/app/paginas/student-soft-skill-evaluation/student-soft-skill-evaluation.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/student-soft-skill-evaluation/student-soft-skill-evaluation.component.css
@@ -1,3 +1,25 @@
 .containerSoftSkills{
+    margin-top: 30px;
     margin-left: 250px;
 }
+
+h2{
+    font-size: 35px;
+    font-weight: bold;
+  }
+  
+  label{
+    font-size: 20px;
+  }
+
+  .form-tarea{
+    background: rgba(255,255,255,0.3);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255,255,255,0.15);
+    width: 35em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
