--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
@@ -284,4 +284,9 @@ h3{
   line-height: 1em;
 }
 
-    
+.closesesion{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
