--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
@@ -43,4 +43,5 @@
         </div>
     </section>
   </ng-template>
+  <button class ="btn btn-danger closesesion"(click)="onLogoutClick()">Cerrar sesión</button>
 </div>
