--- a/Angular/proyectoFinal/src/app/paginas/teacher-page/teacher-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/teacher-page/teacher-page.component.css
@@ -271,3 +271,10 @@
       font-weight: 700;
       text-align: center;
     }
+
+    .closesesion{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
+    }
