--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/practicas/practicas.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/practicas/practicas.component.html
@@ -14,7 +14,7 @@
           <td>{{ entrega.name }}</td>
           <td>{{ entrega.surnames }}</td>
           <td>{{ entrega.name_file }}</td>
-          <td>{{ entrega.practice_description }}</td>
+          <td>{{ entrega.description }}</td>
           <td>{{ entrega.points_practice}}</td>
           <div >
           <td>
